# cider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_mv_final.py  bench_mv_plans.py  bench_mv_v3.py  bench_prefill_status.py  pyproject.toml  setup.py
ane_split/: README.md  ane_transpose_bench.c  bench.py  libane_bridge_v6.m  split_linear.py
benchmarks/: bench_e2e_w8a16_split.py  bench_e2e_wxa16.py  bench_full.py  bench_fused2.py  bench_kernel.py  bench_llm_only_w8a8.py  test_bitexact.py
benchmarks/mlx_native/: bench_cider_vs_mlx_int8.py  cider_vs_mlx_int8.md
cider/: __init__.py  convert.py  fused_hybrid.py  nn.py  ops.py
cider/kernels/: int8_mv.metal  int8_mv_v2.metal  int8_mv_v3.metal  int8_mv_v4.metal  pergroup_int8_gemm.metal  pergroup_int8_mv.metal  w4a8_matmul.metal  w8a8_int8_mv.metal  w8a8_matmul.metal  w8a8_quantize.metal
config/: config.yaml
csrc/include/: int8_mv_primitive.h  pergroup_primitive.h  w4a8_primitive.h  w8a8_primitive.h
csrc/src/: int8_mv_primitive.mm  mv_bench_primitive.h  mv_bench_primitive.mm  pergroup_primitive.mm  prim_bindings.cpp  w4a8_primitive.mm  w8a8_primitive.mm
dev/step_kernels/: bench_final.py
dev/step_kernels/step1/: w8a8_matmul.metal
dev/step_kernels/step2/: w8a8_matmul.metal
dev/step_kernels/step3/: w8a8_matmul.metal
dev/step_kernels/step4/: w8a8_matmul.metal
dev/step_kernels/step5/: w8a8_matmul.metal  w8a8_quantize.metal
examples/: basic_usage.py
experimental/: README.md  bench.py  libane_bridge_v6.m  split_linear.py
tests/: test_bitexact.py  test_kernel_correctness.py
tools/: convert_compressed_tensors_to_mlx.py  convert_smooth_to_mlx.py  convert_smooth_w8a8_to_cider.py  eval_ppl_all.py  eval_ppl_baseline.py  eval_ppl_w8a8.py  smoothquant.py
tutorial/: how_to_write_efficient_int_gemm_m5_en.md  how_to_write_efficient_int_gemm_m5_zh.md
vlm_service/: __init__.py  bench_client.py  bench_e2e_w8a16_real.py  client.py  code_def.py  config.py  config.yaml  convert_qwen3vl_smooth_to_mlx.py  core_infer.py  custom_qwen3vl.py  profile_ane_ops.py  replay_prompt.py  server.py  utils.py
vlm_service/session/: result.json
